--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,137 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap');
+
+* {
+	margin: 0;
+	padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+	background: #fff;
+	color: #222;
+	font-family: 'Montserrat',
+	sans-serif;
+	font-size: 300;
+}
+
+.wrapper {
+	width: 1280px;
+	margin: 50px auto;
+}
+
+header .logo {
+	font-weight: 600;
+	font-size: 20px;
+}
+
+header ul.nav {
+	float: right;
+	list-style: none;
+}
+
+header ul.nav li {
+	display: inline;
+	margin-left: 25px;
+	cursor: pointer;
+	transition: opacity 500ms ease;
+}
+
+header ul.nav li:hover {
+	opacity: 0.5;
+}
+
+header .presentation {
+	margin: 50px 0;
+	background: url('./img/bg.jpg') no-repeat;
+	background-size: cover;
+	background-position: center center;
+	background-blend-mode: multiply;
+	background-color: #bcbcbc;
+	width: 100%;
+	height: 500px;
+	position: relative;
+
+}
+
+header .presentation::after {
+	content: 'Лучшие товары для вашего дома';
+	position: absolute;
+	top: 100px;
+	left: 50px;
+	width: 300px;
+	font-size: 40px;
+	font-weight: 600;
+	color: #fff;
+}
+
+header .presentation::before {
+		content: 'по низким ценам';
+		position: absolute;
+		top: 250px;
+		left: 50px;
+		width: 300px;
+		font-size: 25px;
+		font-weight: 300;
+		color: #fff;
+}
+
+main {
+	display: flex;
+	width: 100%;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: flex-end;
+	box-sizing: border-box;
+
+}
+
+main .item {
+	width: 30%;
+	margin-bottom: 50px;
+	background: #f5f5f5;
+	overflow: hidden;
+	position: relative;
+	padding-bottom: 20px;
+}
+
+main .item img {
+	width: 100%;
+	border-radius: 10px 10px 0 0;
+	transition: transform 500ms ease;
+
+}
+main .item img:hover {
+	transform: scale(1.05);
+}
+
+main h2, main p, main b {
+	margin: 10px 20px;
+	color: #333;
+}
+
+main b {
+	color: #398760;
+}
+
+main .add-to-cart {
+	position: absolute;
+	right: 20px;
+	bottom: 20px;
+	background: #ca5252;
+	width: 35px;
+	height: 35px;
+	text-align: center;
+	line-height: 35px;
+	border-radius: 50%;
+	color: #fff;
+	cursor: pointer;
+	font-weight: 600;
+	transition: transform 500ms ease;
+}
+main .add-to-cart:hover {
+	 transform: scale(1.5) translateY(-5px);
+}
+
+footer {
+	text-align: center;
+	margin-top: 100px;
 }
